0.7
[*] Refactor: renamed variables.
[*] Updated documentation.
[+] Add Events
[+] New Unit tests.

0.6
[*] New naming conventions.
[+] English readme.

0.5rc2
[*] Fixed bug when product count was set to zero when restoring from session.
[*] Changed behaviour of put() method.
[+] Added update() method. Updates cart object info.

0.5
[*] Now only IECartPosition object could be put into cart.
[*] Method names changed.
[+] Unit tests.
[+] PHP native interface checks.
[*] Renamed cart class to CShoppingCart.
[+] Single model can be put in array style.

0.2
[+] Initial relase.